src/App.css
@import url('https://fonts.googleapis.com/css2?family=Marcellus+SC&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Alice&display=swap');

body {
  margin: 0;
  /* font-family: 'Berkshire Swash'; */
  /* font-family: 'Marcellus SC', sans-serif; */
  font-family: 'Alice', serif;
}
input:focus, textarea:focus, select:focus{
  outline: none;
}

/* MOBILE FIRST STYLING */

/* LOADING GIFS */
.loading {
  opacity: 0.8;
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  z-index: 1000;
}

.loading img {
  width: 20%;
}

/* NAVBAR */
/* .nav-logo {
  background: #ffffff;
  color: black;
  padding: 5px;
  border-radius: 3px;
  font-size: 1.4rem;
} */

.app-logo {
  width: 70%;
  margin-left: -32px;
}

.auth-btn {
  color: #ffffff;
  font-size: 1rem;
}

.username-display {
  font-size: 1.2rem;
}

.logout-btn {
  display: none;
}

/* SEARCH BAR */
.search-bar {
  border: none;
  border-bottom: solid 2px #575757;
}
.search-bar:focus {
  border-bottom: solid #991a00 2px;
  color: #991a00;
}
.search-bar:focus::-webkit-input-placeholder {
  color: #991a00;
}

/* ALL ITEMS */
.menu-list {
  font-family: 'Alice', serif;
}

.title-container {
  margin: 0 auto 30px;
  padding-top: 20px;
  width: 93%;
  border-bottom: solid black 3px;
}

.title-container h1 {
  margin: 0;
  font-size: 2.2rem;
  width: 65%;
}

.grid-container {
  /* display: grid;
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); */
  width: 93%;
  margin: 0 auto;
}

.item-container {
  display: flex;
  align-items: center;
  width: 95%;
  height: 50px;
  padding: 10px;
  margin: 8px auto;
  border-radius: 3px;
  box-shadow: 1px 1px 3px #a0a0a0;
  cursor: pointer;
  transition: 0.4s;
}

.item-container:hover {
  background: #eee;
}

.item-icon {
  padding-right: 12px;
}

.item-name {
  width: 100%;
}

.item-name h2 {
  color: #000;
  margin: 0;
  font-size: 1.2rem;
}

.item-name p {
  color: rgb(133, 133, 133);
  margin: 0;
  font-size: 0.8rem;
}

.item-cost {
  width: 30%;
}

.item-weight {
  display: none;
  width: 13%;
}

.item-specs {
  display: none;
  width: 30%;
}

/* DIALOG STYLES */
.dialog-container {
  margin: 15px;
  height: auto;
  overflow: hidden;
  padding: 20px;
  background: #ffffff;
  position: relative;
}

.dialog-container::before {
  content: ""; height: 3px;
  position: absolute;
  left: 0;
  right: 0;
  top: -1px;
  background-color: black;
  clip-path: polygon(0% 0%, 5%  100%, 10% 0%, 15%  100%, 20% 0%, 
  25% 100%, 30% 0%, 35%  100%, 40% 0%, 45%  100%, 50% 0%, 55%  100%, 
  60% 0%, 65%  100%, 70% 0%, 75%  100%, 80% 0%, 85%  100%, 90% 0%, 
  95%  100%, 100% 0%);
}

.dialog-container::after {
  content: ""; height: 3px;
  position: absolute;
  left: 0;
  right: 0;
  bottom: -1px;
  background-color: black;
  clip-path: polygon(0% 0%, 5%  100%, 10% 0%, 15%  100%, 20% 0%, 
  25% 100%, 30% 0%, 35%  100%, 40% 0%, 45%  100%, 50% 0%, 55%  100%, 
  60% 0%, 65%  100%, 70% 0%, 75%  100%, 80% 0%, 85%  100%, 90% 0%, 
  95%  100%, 0% 100%);
}

.dialog-name {
  text-align: center;
}

.dialog-name h3 {
  font-size: 2.4rem;
  margin: 0;
}

.dialog-name p {
  font-size: 1.2rem;
}

.dialog-costweight {
  display: flex;
  justify-content: space-evenly;
  text-align: center;
}

.dialog-costweight h4 {
  margin-bottom: 0.5rem;
  text-decoration: underline;
}

.dialog-costweight p {
  margin: 0;
}

.dialog-specs {
  text-align: center;
  margin-top: 40px;
}

.dialog-specs p {
  margin: 0;
}

.dialog-DM {
  text-align: center;
}

.dialog-DM h4 {
  margin-bottom: 0.5rem;
  text-decoration: underline;
}

.dialog-DM p {
  margin: 0;
}

.dialog-delete {
  text-align: center;
  margin-top: 15px;
}

.delete-button {
  margin: 0;
  width: 32%;
  border: none;
  font-size: 0.7em;
  padding: 6px;
  background: #991a00;
  color: #ffffff;
  font-family: 'Alice';
  cursor: pointer;
  -webkit-appearance: none;
}

/* LOGIN/SIGNUP/CREATE ITEM FORMS */
.form-container {
  text-align: center;
  margin: 80px 15px;
  font-size: 1.3rem;
}

.form-header {
  font-size: 1.6rem;
}

.form-input {
  width: 90%;
  border: none;
  border-bottom: solid #575757 2px;
  color: rgba(0, 0, 0, 0.5);
  font-size: 0.8em;
  margin: 0 0 25px;
  padding-bottom: 10px;
  font-family: 'Alice';
  -webkit-appearance: none;
}

.form-input:focus {
  border-bottom: solid #991a00 2px;
  color: #991a00;
}
.form-input:focus::-webkit-input-placeholder {
  color: #991a00;
}

.form-button {
  width: 90%;
  border: none;
  font-size: 0.8em;
  padding: 10px;
  margin: 0 0 25px;
  background: #991a00;
  color: #ffffff;
  font-family: 'Alice';
  cursor: pointer;
  -webkit-appearance: none;
}

/* CREATE NEW ITEM */
.createitem-btn {
  padding: 5px;
  font-size: 1.1rem;
  color: #ffffff;
  background: #991a00;
  cursor: pointer;
}

/* ALERT */
.alert {
  text-align: center;
}

.alert-success {
  color: green;
}

.alert-danger {
  color: red;
}

/* EMPTY CUSTOM ITEMS */
.empty-state {
  margin: 100px auto;
  text-align: center;
}

/* MEDIA QUERIES - LARGER SCREENS*/
@media (min-device-width : 768px) {
  /* LOADING GIF */
  .loading img {
    width: 7%;
  }
  /* NAVBAR */
  .app-logo {
    width: 25%;
  }

  .username-display {
    margin-right: 15px;
  }

  .auth-btn {
    display: block;
    font-size: 1.2rem;
    margin-left: 5px;
    margin-right: 15px;
  }

  .logout-btn {
    display: block;
  }

  /* ITEMS */
  .title-container {
    width: 78%;
  }

  .grid-container {
    width: 80%;
  }

  .item-name {
    width: 40%;
  }

  .item-cost {
    width: 13%;
  }

  .item-weight {
    display: block;
  }

  .item-specs {
    display: block;
  }

  .dialog-name {
    width: 100%;
  }

  /* FORMS */
  .form-input {
    max-width: 450px;
  }
  .form-button {
    max-width: 450px;
  }
}

